--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#557382 by Josh Waihi, Scott Reynolds mlt blocks were double encoding titles.
 #543226 by drunken monkey validate port on settings form.
 #502976 by Scott Reynolds followup to Other GET parameters ignored by Apache Solr Facet Blocks
 
