--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#538636 by robertDouglass allow modules to register document handlers so that multiple documents can be indexed per entity.
 #557382 by Josh Waihi, Scott Reynolds mlt blocks were double encoding titles.
 #578008 by robertDouglass improve performance by not including unused facet queries.
 #552152 by robertDouglass OR operator for facet blocks.
