--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#554136 by emackn, Jaza make results-per-page alterable.
 #580764 by robertDougalss Add a new contrib module that allows searching on just comments.
 #548160 by robertDouglass get rid of functions that begin with underscore. Yuck.
 #580404 by robertDouglass make indexing of comments optional. New variable, apachesolr_index_comments_with_node.
