--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 5.x-2.x, 2009-09-22
 ------------------------------
+#584902 by cpliakas, robertDouglass, make $extra a keyed array and prevent PHP warnings.
 #557152 by claudiu.cristea Backporting 6.x-1.x to 5.x-2.x
 
 Apache Solr integration 6.x-1.x, xxxx-xx-xx
