--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#590982 by swentel fix warnings on indexing.
 #584902 by cpliakas, robertDouglass, make $extra a keyed array and prevent PHP warnings.
 #554136 by emackn, Jaza make results-per-page alterable.
 #557382 by Josh Waihi, Scott Reynolds mlt blocks were double encoding titles.
