--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,6 +8,7 @@ Apache Solr integration 6.x-1.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-1.0-RC3, xxxx-xx-xx
 ------------------------------
+#580404 by pwolanin, allow per-node-type comment exclusion.
 #597174 by Frando, add hook_apachesolr_prepare_query() to enable custom sorts.
 #551582 by claudiu.cristea Add callbacks to lookup values based on key for CCK fields.
 #590982 by swentel fix warnings on indexing.
