--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#597174 by Frando, add hook_apachesolr_prepare_query() to enable custom sorts.
 #591278 by robertDouglass fix bug that was preventing hook_apachesolr_modify_query from working correctly.
 #590982 by swentel fix warnings on indexing.
 #554136 by emackn, Jaza make results-per-page alterable.
