--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#610656 by pwolanin, Don't request facets for non-enabled modules.
 
 Apache Solr Search Integration 6.x-1.0-RC3, 2009-10-15
 ------------------------------
