--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,8 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#576040 by robertDouglass use Drush to download the SolrPhpClient: drush solr phpclient
+#570476 by robertDouglass add initial Drush support with commands drush solr delete index and drush solr reindex.
 #612024 by pwolanin, Add method to allow requests to additional Solr servelets.
 #611670 by pwolanin, Allow modules to abort the building of documents for indexing.
 #610656 by pwolanin, Don't request facets for non-enabled modules.
