--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,9 +4,9 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 ------------------------------
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
-------------------------------
+------------------------------                                                 
+#621922 by robertDouglass make the "Show more" js more robust.
 #612024 by pwolanin, Add method to allow requests to additional Solr servelets.
-
 #561082 by pwolanin, consolidate Solr delete queries on cron.
 #580404 by pwolanin per content type comment exclusion.
 #597174 by Frando, add hook_apachesolr_prepare_query() to enable custom sorts.
