--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search integration 5.x-2.x, 2009-10-23
 ------------------------------
+#621922 by robertDouglass make the "Show more" js more robust.
 #611670 by pwolanin, Allow modules to abort the building of documents for indexing.
 #610656 by pwolanin, Don't request facets for non-enabled modules.
 #561082 by pwolanin, consolidate Solr delete queries on cron.
