--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------                                                 
+#623046 by robertDouglass make the results that come back from a search more useful.
 #622120 by robertDouglass make the "Show more" block selection dynamic to accommodate other modules.
 #621922 by robertDouglass make the "Show more" js more robust.
 #612024 by pwolanin, Add method to allow requests to additional Solr servelets.
