--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#630798 by joshk, robertDouglass make cache_apachesolr table to facilitate better memcache utilization.
 #621922 by robertDouglass make the "Show more" js more robust.
 #576040 by robertDouglass use Drush to download the SolrPhpClient: drush solr phpclient
 #570476 by robertDouglass add initial Drush support with commands drush solr delete index and drush solr reindex.
