--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#628080 by pwolanin, update to use Solr PHP library r22 and check for it in hook_requirements.
 #630798 by joshk, robertDouglass make cache_apachesolr table to facilitate better memcache utilization.
 #621922 by robertDouglass make the "Show more" js more robust.
 #576040 by robertDouglass use Drush to download the SolrPhpClient: drush solr phpclient
