--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------                                                 
+#641452 by robertDouglass, prevent admin from trying to re-index when in read-only mode.
 #372767 by socki, robertDouglass, allow MLT blocks to be filtered by type and custom filters.
 #372336 by der, janusman, robertDouglass, allow name sorting of facet links.
 #611670 by pwolanin, allow modules to abort the building of documents for indexing.
