--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#641452 by robertDouglass, prevent admin from trying to re-index when in read-only mode.
 #638572 by robertDouglass fix taxonomy facet sorting.
 #562458 by janusman, fix typo preventing menu_rebuild regarding taxonomy hijack.
 #628080 by pwolanin, update to use Solr PHP library r22 and check for it in hook_requirements.
