--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------                                                 
+#652512 by roberetDouglass enable use of more than just the default solr server.
 #642602 by robertDouglass, change 'content type' to 'content_type' in facet definitions.
 #641452 by robertDouglass, prevent admin from trying to re-index when in read-only mode.
 #372767 by socki, robertDouglass, allow MLT blocks to be filtered by type and custom filters.
