--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,7 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------                                                 
-#655006 by Scott Reynolds fix warnings on constants.
+#655006 by Scott Reynolds, pwolanin fix warnings on constants.
 #652512 by robertDouglass enable use of more than just the default solr server.
 #642602 by robertDouglass, change 'content type' to 'content_type' in facet definitions.
 #641452 by robertDouglass, prevent admin from trying to re-index when in read-only mode.
