--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------                                                 
+#651044 by kcoop use node title for comment title when comment has no title.
 #655006 by Scott Reynolds, pwolanin fix warnings on constants.
 #652512 by robertDouglass enable use of more than just the default solr server.
 #642602 by robertDouglass, change 'content type' to 'content_type' in facet definitions.
