--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -12,7 +12,7 @@ Apache Solr integration 6.x-2.x, xxxx-xx-xx
 #652512 by robertDouglass enable use of more than just the default solr server.
 #642602 by robertDouglass, change 'content type' to 'content_type' in facet definitions.
 #641452 by robertDouglass, prevent admin from trying to re-index when in read-only mode.
-#372767 by socki, robertDouglass, allow MLT blocks to be filtered by type and custom filters.
+#372767 by socki, robertDouglass, pwolanin allow MLT blocks to be filtered by type and custom filters.
 #372336 by der, janusman, robertDouglass, allow name sorting of facet links.
 #611670 by pwolanin, allow modules to abort the building of documents for indexing.
 #628080 by pwolanin, update to use Solr PHP library r22 and check for it in hook_requirements.
