--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#666648 by pwolanin, Make hook_apachesolr_update_index() more generic by taking a namespace param also.
 #662232 by pwolanin, use 'und' not 'zxx' for Language neutral per Drupal 7 change.
 #665186 by mkalkbrenner, fix README for Solr 1.4 release.
 #664572 by pwolanin, add schema and core name to admin screen.
