--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------                                                 
+#667124 by pwolanin: Fixed Use current query not altered query for the breadcrumb.
 #667650 by Dave Reid: Fixed Results of apachesolr_process_response() should return absolute URLs.
 #664572 by pwolanin: Added Add schema and core name to admin screen.
 #664860 by pounard: Fixed Wrong t() usage in apachesolr_field_name_map().
