--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,7 +4,10 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 ------------------------------
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
-------------------------------                                                 
+------------------------------
+
+Apache Solr integration 6.x-2.0-ALPHA1, 2009-12-26
+------------------------------  
 #664818 by pounard, robertDouglass | Scott Reynolds: Fixed Wrong watchdog() usage.
 #662232 by pwolanin | anarchivist: Changed Use language-neutral code like D7.
 #666648 by pwolanin: Changed Make hook_apachesolr_update_index() more generic by taking a namespace param also.
