--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#657648 by kcoop: Added Add Smaller Limit Options to Apache Solr Cron Indexing.
 #664818 by pounard, robertDouglass | Scott Reynolds: Fixed Wrong watchdog() usage.
 #667650 by Dave Reid: Fixed Results of apachesolr_process_response() should return absolute URLs.
 #667124 by pwolanin, Use current query not altered query for the breadcrumb.
