--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,7 +3,10 @@
 Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 ------------------------------
 
-Apache Solr Search integration 5.x-2.x, 2009-10-23
+Apache Solr Search Integration 5.x-2.x, 2009-10-23
+------------------------------
+
+Apache Solr Search Integration 5.x-2.0-beta2, 2009-12-26
 ------------------------------
 #657648 by kcoop: Added Add Smaller Limit Options to Apache Solr Cron Indexing.
 #661952 by pwolanin, fix no results help text for dismax syntax.
