--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,7 +9,7 @@ Apache Solr integration 6.x-2.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.0-ALPHA1, 2009-12-26
 ------------------------------  
-#664818 by pounard, robertDouglass | Scott Reynolds: Fixed Wrong watchdog() usage.
+#664818 by robertDouglass, pounard, pwolanin | Scott Reynolds: Fixed Wrong watchdog() usage.
 #662232 by pwolanin | anarchivist: Changed Use language-neutral code like D7.
 #666648 by pwolanin: Changed Make hook_apachesolr_update_index() more generic by taking a namespace param also.
 #667110 by pwolanin: Fixed Replace bogus use of pager_query().
