--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2009-10-23
 ------------------------------
+#672518 by robertDouglass: Fixed Add new trie prefixes to helper function .
 
 Apache Solr Search Integration 5.x-2.0-beta2, 2009-12-26
 ------------------------------
