--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+#672530 by robertDouglass: Fixed Change array key names from display callback to display_callback() and indexing callback to indexing_callback().
 #672518 by robertDouglass: Fixed Add new trie prefixes to helper function .
 #551582 by drewish: Fixed Show value instead of key in CCK facets.
 #668396 by pwolanin, closer to fix from #655006 for PHP notices.
