--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2010-xx-xx
 ------------------------------
+#623046 by robertDouglass, Make the results that come back from a search more useful.
 #679522 by pwolanin, Add gettableFiles to solr admin interface config.
 #672518 by robertDouglass: Fixed Add new trie prefixes to helper function .
 
