--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2010-xx-xx
 ------------------------------
+#628080 by pwolanin, update to use Solr PHP library r22 and check for it in hook_requirements.
 #630798 by joshk, robertDouglass make cache_apachesolr table to facilitate better memcache utilization.
 #623046 by robertDouglass, Make the results that come back from a search more useful.
 #679522 by pwolanin, Add gettableFiles to solr admin interface config.
