--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,8 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2010-xx-xx
 ------------------------------
+#662232 by pwolanin, use 'und' not 'zxx' for Language neutral per Drupal 7 change.
+#665186 by mkalkbrenner, fix README for Solr 1.4 release.
 #664572 by pwolanin, add schema and core name to admin screen.
 #528086 by pwolanin, better (but still problematic) handling of entities.
 #662232 by pwolanin, index zxx as the Language neutral code.
