--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2010-xx-xx
 ------------------------------
+#551582 by drewish: Fixed Show value instead of key in CCK facets.
 #664818 by pounard, robertDouglass, pwolanin fix incorrect watchdog() call.
 #667650 by Dave Reid: Fixed Results of apachesolr_process_response() should return absolute URLs.
 #667124 by pwolanin, Use current query not altered query for the breadcrumb.
