--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,8 +5,9 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 6.x-1.x, xxxx-xx-xx
 ------------------------------
+#666936 by justindodge, pwolanin make Drupal.behaviors.apachesolr respect context.
 #672882 by David Lesieur, Fix Show more links on taxonomy facets.
-#679522 by pwolanin, Add gettableFiles to solr admin intefrace config.
+#679522 by pwolanin, Add gettableFiles to solr admin interface config.
 
 Apache Solr Search Integration 6.x-1.0-RC5, 2010-01-04
 ------------------------------
