--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2010-xx-xx
 ------------------------------
+#708812 by claudiu.cristea: "Show more" link is missed from facet blocks.
 #696758 by claudiu.cristea: Don't include admin files in normal pages.
 
 Apache Solr Search Integration 5.x-2.0-rc2, 2010-01-22
