--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2010-xx-xx
 ------------------------------
+#707566 by davidwhthomas: Drupal 5 PostgreSQL.
 #666936 by justindodge, pwolanin make Drupal.behaviors.apachesolr respect context.
 #708812 by claudiu.cristea: "Show more" link is missed from facet blocks.
 #696758 by claudiu.cristea: Don't include admin files in normal pages.
