--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Apache Solr Search Integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr Search Integration 5.x-2.x, 2010-xx-xx
 ------------------------------
+#724440 by abautu: Current search does not display properly the CCK filters.
 #722194 by abautu, claudiu.cristea: Solr logs are not accessible.
 #664994 by pounard, claudiu.cristea: Cache CCK fields and small API improvement.
 #707566 by davidwhthomas: Drupal 5 PostgreSQL.
