--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,9 @@ Apache Solr integration x.x-x.x, xxxx-xx-xx
 
 Apache Solr integration 6.x-2.x, xxxx-xx-xx
 ------------------------------
+
+Apache Solr integration 6.x-2.0-BETA1, 2010-03-24
+------------------------------
 #649038 by brunodbo, slip | robertDouglass: Fixed Search not working on 404 page.
 
 Apache Solr integration 6.x-2.0-ALPHA3, 2010-03-22
